<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/course_type_horizontal_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/course_type_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/course_frontend"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/course_type_btn_common"
                android:text="@string/course_frontend"
                android:textColor="@color/colorCourseTypeName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/course_backend"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/course_type_btn_common"
                android:text="@string/course_backend"
                android:textColor="@color/colorCourseTypeName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/course_mobiledev"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/course_type_btn_common"
                android:text="@string/course_mobiledev"
                android:textColor="@color/colorCourseTypeName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/course_data"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/course_type_btn_common"
                android:text="@string/course_data"
                android:textColor="@color/colorCourseTypeName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/course_marketing"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/course_type_btn_common"
                android:text="@string/course_marketing"
                android:textColor="@color/colorCourseTypeName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/course_uxui"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/course_type_btn_common"
                android:text="@string/course_uxui"
                android:textColor="@color/colorCourseTypeName"
                android:textSize="16sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/course_type_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>